# easy-ml-config

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-tests.yml
src/easy_ml_config/: configuration.py
src/ml_config/: __init__.py  configuration.py
tests/: _complex_config.toml  _test_config.yaml  test_subconfig.py
